2007-09-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/*.h:
	* src/tags/*.h:
	Get rid of G_BEGIN_DECLS and G_END_DECLS

2007-09-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Send files via email or instant messenger (using nautilus-sendto)

2007-09-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-home.cc:
	* src/gnome-cmd-con-smb.cc:
	* src/gnome-cmd-pixmap.cc:
	* src/gnome-cmd-pixmap.h:
	Use default GNOME theme icons for home, SMB and FTP locations

2007-09-12  Mike Crash <mike@mikecrash.com>

	* src/gnome-cmd-con-device.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-pixmap.cc:
	* src/gnome-cmd-pixmap.h:
	Fixed problem #434545 (Debian bug #421480: HUGE icons for device icons)

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/utils.cc:
	* src/utils.h:
	* src/libgviewer/viewer-window.c:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	* src/tags/gnome-cmd-tags.cc:
	Replaced ARRAY_ELEMENTS with glib G_N_ELEMENTS macro

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/tags/gnome-cmd-tags.cc:
	Fixed crash when building menu button for metatags

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Fixed bug in GdkEventKey handling (improper use of g_ascii_is...(key_val))

2007-08-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	Fixed build problem (incorrect #ifndef)

2007-08-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Replaced metatags[] array with its DICT<GnomeCmdTag,TagName> counterpart

2007-08-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Added button for copying metatags to clipboard
