@@ -20,6 +20,8 @@ New features:
  * Send files via email or instant messenger (using nautilus-sendto)
  * New or updated translations: cs, dz, es, eu, oc, pl, pt_BR
  * New key bindings:
+      CTRL+LEFT/RIGHT Copying the current working directory from the active
+                      filelist to the inactive one
 
 
 ===================================
